project(mmdelta)
cmake_minimum_required(VERSION 3.2)
aux_source_directory(. SRC_LIST)
find_package(LibLZMA REQUIRED)
add_executable(${PROJECT_NAME} ${SRC_LIST})
set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 11)
target_include_directories(${PROJECT_NAME} PUBLIC ${LIBLZMA_INCLUDES})
target_link_libraries(${PROJECT_NAME} ${LIBLZMA_LIBRARIES})
